--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-
-
 <body>
 
     <div class="banner">
         <div class="about-sign-in">
             <a href="#" class="about">About</a>
             <a href="#" class="sign-in">sign in</a>
-
-
         </div>
+
+
         <div class="logo">
 
         </div>
@@ -41,13 +39,18 @@
             <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
 
         </div>
-        <div class="button-start-now">
-            <button>Start now</button>
-
-        </div>
-
+        <div>AAAAAAAAAAAAA</div>
 
     </div>
+
+
+
+
+    <!-- <div class="content-body-1 banner">
+        <div class="button-start-now">
+            <button>Start now 2</button>
+        </div>
+    </div> -->
 
 </body>
 
